- Tidy up overall grid/layout including navigation. Preferring fixed grid with .container and .row-fluid wrapper for content, as needed. - Tidy up styling for all rental views, including phone and tablet views - Things learned: -- Bootstrap scaffolding and base CSS, and how they change with responsive CSS -- Jade and styl files modification, as well as how it interacts with the AngularJS parts of the code. -- Making things responsive while shifting around some bits of AngularJS code

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,55 @@
-img.rental {
-  float: left;
-  margin-right: 1em;
-  margin-bottom: 1em;
+body {
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #b0b3b5;
+}
+a {
+  color: #00b7ff;
+}
+.navbar a.brand {
+  padding: 10px 14px;
+}
+.content {
   background-color: #fff;
-  padding: 1em;
-  height: 50px;
-  width: 50px;
+  margin: 72px 0 40px 0;
+  padding: 8px 24px 24px 24px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+}
+ul.nav {
+  margin-bottom: 0;
+}
+ul.nav.nav-tabs {
+  background-color: #f0f0f0;
+  padding: 8px 10px 0 10px;
+  border-top: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0;
+}
+.nav-tabs>.active>a,
+.nav-tabs>.active>a:hover,
+.nav-tabs>.active>a:focus {
+  background-color: #fcfcfc;
+}
+.nav-tabs>li>a {
+  font-weight: bold;
+}
+.rental-save {
+  margin: 8px 10px 0 0;
+}
+.tab-content {
+  background-color: #fcfcfc;
+  padding: 14px;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  -webkit-border-radius: 0 0 5px 5px;
+  -moz-border-radius: 0 0 5px 5px;
+  border-radius: 0 0 5px 5px;
+  overflow: visible;
 }
 input.ng-pristine.ng-invalid {
   border: solid 2px #f00;
@@ -16,5 +60,97 @@ input.ng-dirty.ng-invalid {
 input.ng-dirty.ng-valid {
   border: solid 2px #008000;
 }
-
-/* test comment for git training purpose, please delete this line of code on sight! */
+.nav>li>a:hover,
+.nav>li>a:focus {
+  background: #ddd;
+  cursor: pointer;
+}
+.nav-tabs>.active>a,
+.nav-tabs>.active>a:hover,
+.nav-tabs>.active>a:focus {
+  font-weight: bold;
+}
+img.rental-main-image {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+.tab-content label {
+  font-weight: bold;
+}
+label.rental-name {
+  font-size: 17.5px;
+}
+h4.seasonal-rate,
+h4.event-rate {
+  margin-top: 48px;
+}
+.icon-in-h4 {
+  margin-top: 5px;
+}
+.nightly-label {
+  float: left;
+  margin: 5px 8px 0 0;
+  font-weight: normal !important;
+}
+.control-group {
+  margin-bottom: 0;
+}
+.input-append .add-on,
+.input-prepend .add-on {
+  background-color: #f5f5f5;
+}
+.season-event {
+  padding-right: 9px;
+  border-right: 1px solid #ededed;
+}
+.season-event select {
+  margin-right: 6px;
+}
+.input-season-name,
+.input-event-name,
+.input-contract-title {
+  font-weight: bold;
+}
+.input-year {
+  width: 74px;
+}
+.input-month {
+  width: 82px;
+}
+.input-day {
+  width: 68px;
+}
+.input-helper {
+  position: relative;
+  top: -3px;
+  margin: 0 8px 0 4px;
+}
+.line-break {
+  height: 0;
+}
+.input-rate {
+  width: 90px;
+}
+.h-divider hr {
+  margin: 10px 0;
+}
+a span.delete-rate:hover,
+a span.delete-rate:focus {
+  cursor: pointer;
+}
+.well-rates,
+.well-contract {
+  background-color: #f9f9f9;
+  border: 1px solid #ededed;
+  -webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0);
+  -moz-box-shadow: inset 0 0 0 rgba(0,0,0,0);
+  box-shadow: inset 0 0 0 rgba(0,0,0,0);
+}
+.well-contract {
+  margin-bottom: 20px;
+}
+.well.debug {
+  display: none;
+  margin-top: 200px;
+}
